Include pinned count in GC compaction test calculation

The GC compaction tests create many VALUEs, and expect that they are all
moved by a call to GC.verify_compaction_references. However, it's
possible that an object might not be moved if there's a reference to it
on the machine stack, or even just a random block of numbers in
unitialized memory that turns out to point to it.

This can lead to these tests (rarely) failing with messages like

```
    1) Failure:
  TestGCCompact#test_moving_strings_up_size_pools [/home/runner/work/ruby/ruby/src/test/ruby/test_gc_compact.rb:405]:
  Expected 49999 to be >= 50000.
```

One unlucky string was referenced on the machine stack, and hence it was
pinned.

The fix for this is to just count pinned objects during compaction as
well, and include that in the test assertion.

Previously, as part of #20021, we attempted to fix this by wrapping the
test case in a Fiber, which would go out of scope before the call to
verify_compaction_references, so its machine stack would be freed. This
helped, but was not totally sufficient.

At the time I considered doing this fix instead, but I was worried that
it would make the tests meaningless since there's always a few things
pinned on the machine stack. Since I fixed #20022 though, I was able to
drastically increase the number of objects created as part of the test,
so the "normal" amount of pinned objects should be very low in
comparison. Hence, now, changes to verify_compaction_references that
reduce the number of objects being compacted by anything but a trivial
amount should still cause this test to break.

[Bug #20021]